--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
             
     </head>
 <body>
+  <link rel="icon" href="butterflycursor.png" type="image/x-icon">
+<link rel="icon" href="images/favicon.png" type="image/png">
 
     <div class="newnavbar" id="navbar">
       <div class="dropdown">
